--- a/index-v2.html
+++ b/index-v2.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Aurelia Inspector</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-
   <body>
     <app></app>
   </body>
