fix(inspector): correct method fro keyup

--- a/src/resources/elements/property-view.html
+++ b/src/resources/elements/property-view.html
@@ -43,7 +43,7 @@
       ref="editor"
       type="text"
       value.bind="property.value"
-      keyup.trigger="onKeyDown($event)"
+      keyup.trigger="keyup($event)"
       blur.trigger="endEditing()"
     />
   </span>
